Fixed spacing issue for migration

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -28,8 +28,10 @@
 
     // Migration styles
     // -----------------------------
+
+    
     // Replace with corresponding template values
-    @container-width: 1200px;
+    @container-width: 960px;
     @spacing--other: 30px;
     @major-breakpoint: 769px;
 
@@ -37,32 +39,20 @@
     // Applies spacing to widgets to mimic container width
     .empty-zone,
     #page-zones__main:empty,
-    #page-zones__main > .widget:not(.row) {
-        margin-left: auto;
-        margin-right: auto;
-        max-width: @container-width;
-        padding-left: ~'calc(5% + 2em)';
-        padding-right: ~'calc(5% + 2em)';
-
-        @media only screen and (max-width: @major-breakpoint) {
-            padding-left: ~'calc(5% + 1em)';
-            padding-right: ~'calc(5% + 1em)';
-        }
-    }
-
-    // Applies spacing to row widget container to mimic container width
+    #page-zones__main > .widget:not(.row),
     .row:not(.widget):not(.row--width-no-padding) .row__container {
         margin-left: auto;
         margin-right: auto;
         max-width: @container-width;
-        padding-left: 2em;
-        padding-right: 2em;
+        padding-left: 0;
+        padding-right: 0;
+        width: calc(100% - 4em);
 
         @media only screen and (max-width: @major-breakpoint) {
-            padding-left: 1em;
-            padding-right: 1em;
+            width: calc(90% - 2em);
         }
     }
+
 
     // Add spacing to the top of a widget when it follows a section
     #page-zones__main > .row + .widget:not(.row) {
@@ -75,7 +65,7 @@
         margin-bottom: @spacing--other;
         margin-top: @spacing--other;
 
-        &:not(:last-child) {
+        &:last-child {
             margin-bottom: 0;
         }
     }
@@ -86,15 +76,6 @@
 
         @media only screen and (max-width: @major-breakpoint) {
             margin-top: -10px;
-        }
-    }
-
-    // Move spacing to last row widget in the main zone
-    #page-zones__main > .row:last-child {
-        margin-bottom: -1.5em !important;
-
-        @media only screen and (max-width: @major-breakpoint) {
-            margin-top: -1em !important;
         }
     }
 
